--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
-/backend/node_modules
+#CLIENT
+/client/node_modules
+client/.pnp
+client/.pnp.jsclient
 
-/backend/.env
+client/coverageclient
+
+client//buildclient
+
+client/.DS_Store
+client/.env.local
+client/.env.development.local
+client/.env.test.local
+client/.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+#SERVER
+/server/node_modules
+/server/.env
