add achievements table

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,29 @@
 #CLIENT
-/client/node_modules
+
+#dependencies
+client/node_modules
 client/.pnp
-client/.pnp.jsclient
+client/.pnp.js
 
-client/coverageclient
+#testing
+client/coverage
 
-client//buildclient
+#production
+client//build
 
+#misc
 client/.DS_Store
 client/.env.local
 client/.env.development.local
 client/.env.test.local
 client/.env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+client/npm-debug.log*
+client/yarn-debug.log*
+client/yarn-error.log*
 
 #SERVER
+
+#dependencies
 /server/node_modules
 /server/.env
