--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "universal-cookie": "^7.1.4",
