--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,12 @@
   "private": true,
   "dependencies": {
     "@internationalized/date": "^3.6.0",
-    "@nextui-org/react": "^2.4.2",
+    "@nextui-org/react": "^2.6.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
-    "framer-motion": "^11.2.12",
+    "framer-motion": "^11.17.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
@@ -19,7 +19,8 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "universal-cookie": "^7.1.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
